2011-11-19  Patrick Marlier  <patrick.marlier@gmail.com>

	PR middle-end/51211
	* tracer.c (ignore_bb_p): Don't copy GIMPLE_TRANSACTION.

2011-11-19  Eric Botcazou  <ebotcazou@adacore.com>

	* expmed.c (store_bit_field_1): Revert bogus formatting change.

2011-11-19  Richard Earnshaw  <rearnsha@arm.com>

	PR target/50493
	* config/arm/arm.c (neon_disambiguate_copy): Correctly handle partial
	overlap of src and dest operands.

2011-11-19  Iain Sandoe  <iains@gcc.gnu.org>

	* config/darwin.h (ASM_DEBUG_SPEC): New.
	* config/darwin9.h (ASM_DEBUG_SPEC): New.

2011-11-18  Jan Hubicka  <jh@suse.cz>

	* config/i386/i386.c (atom_cost): Disable SSE loop until alignment
	issues are fixed.

2011-11-18  Anatoly Sokolov  <aesok@post.ru>

	* config/cris/cris.c (cris_function_value_regno_p): Make static.
	(TARGET_FUNCTION_VALUE_REGNO_P): Define.
	* config/cris/cris.h (FUNCTION_VALUE_REGNO_P): Remove.
	* config/cris/cris-protos.h (cris_function_value_regno_p): Remove.

2011-11-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/33944
	* doc/extend.texi: Document __builtin_ia32_movnti64.

	* config/i386/emmintrin.h (_mm_stream_si64): New.

	* config/i386/i386-builtin-types.def: Add VOID_FTYPE_PLONGLONG_LONGLONG.

	* config/i386/i386.c (ix86_builtins): Add IX86_BUILTIN_MOVNTI64.
	(bdesc_special_args): Update __builtin_ia32_movnti.  Add
	__builtin_ia32_movnti64.
	(ix86_expand_special_args_builtin): Handle
	VOID_FTYPE_PLONGLONG_LONGLONG.

	* config/i386/i386.md (UNSPEC_MOVNTI): New.

	* config/i386/sse.md (sse2_movntsi): Renamed to ...
	(sse2_movnti<mode>): This.

2011-11-18  Georg-Johann Lay  <avr@gjlay.de>

	PR target/49868
	* config/avr/avr.h (base_arch_s): Add field n_segments.
	(ADDR_SPACE_PGM1, ADDR_SPACE_PGM2, ADDR_SPACE_PGM3,
	ADDR_SPACE_PGM4, ADDR_SPACE_PGM5, ADDR_SPACE_PGMX): New address spaces.
	(AVR_HAVE_ELPM, AVR_HAVE_ELPMX): New defines.
	(INIT_EXPANDERS): New define.
	* config/avr/avr-protos.h (avr_mem_pgmx_p): New.
	(avr_init_expanders): New.